Add model summary

--- a/5. dl_model.ipynb
+++ b/5. dl_model.ipynb
@@ -867,6 +867,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Summary:\n",
+      "Layer Name                                         Shape                          Parameters      Trainable      \n",
+      "--------------------------------------------------------------------------------------------------------------\n",
+      "pos_embed.weight                                   torch.Size([2, 1280])          2560            2560           \n",
+      "transformer_encoder.layers.0.self_attn.in_proj_weight torch.Size([3840, 1280])       4915200         4915200        \n",
+      "transformer_encoder.layers.0.self_attn.in_proj_bias torch.Size([3840])             3840            3840           \n",
+      "transformer_encoder.layers.0.self_attn.out_proj.weight torch.Size([1280, 1280])       1638400         1638400        \n",
+      "transformer_encoder.layers.0.self_attn.out_proj.bias torch.Size([1280])             1280            1280           \n",
+      "transformer_encoder.layers.0.linear1.weight        torch.Size([2048, 1280])       2621440         2621440        \n",
+      "transformer_encoder.layers.0.linear1.bias          torch.Size([2048])             2048            2048           \n",
+      "transformer_encoder.layers.0.linear2.weight        torch.Size([1280, 2048])       2621440         2621440        \n",
+      "transformer_encoder.layers.0.linear2.bias          torch.Size([1280])             1280            1280           \n",
+      "transformer_encoder.layers.0.norm1.weight          torch.Size([1280])             1280            1280           \n",
+      "transformer_encoder.layers.0.norm1.bias            torch.Size([1280])             1280            1280           \n",
+      "transformer_encoder.layers.0.norm2.weight          torch.Size([1280])             1280            1280           \n",
+      "transformer_encoder.layers.0.norm2.bias            torch.Size([1280])             1280            1280           \n",
+      "fc.weight                                          torch.Size([1, 1280])          1280            1280           \n",
+      "fc.bias                                            torch.Size([1])                1               1              \n",
+      "--------------------------------------------------------------------------------------------------------------\n",
+      "Total Parameters: 11813889\n",
+      "Trainable Parameters: 11813889\n"
+     ]
+    }
+   ],
+   "source": [
+    "def model_summary(model):\n",
+    "    print(\"Model Summary:\")\n",
+    "    print(\"{:<50} {:<30} {:<15} {:<15}\".format(\"Layer Name\", \"Shape\", \"Parameters\", \"Trainable\"))\n",
+    "    print(\"-\" * 110)\n",
+    "    total_params = 0\n",
+    "    total_trainable_params = 0\n",
+    "    lm_params = 0\n",
+    "    lm_trainable_params = 0\n",
+    "    lm_layers = 0\n",
+    "    for name, parameter in model.named_parameters():\n",
+    "        param = parameter.numel()\n",
+    "        total_params += param\n",
+    "        # Check if the parameter is trainable\n",
+    "        trainable = parameter.requires_grad\n",
+    "        trainable_param = param if trainable else 0\n",
+    "        total_trainable_params += trainable_param\n",
+    "        print(\"{:<50} {:<30} {:<15} {:<15}\".format(name, str(parameter.size()), param, trainable_param))\n",
+    "    print(\"-\" * 110)\n",
+    "    print(f\"Total Parameters: {total_params}\")\n",
+    "    print(f\"Trainable Parameters: {total_trainable_params}\")\n",
+    "\n",
+    "model_summary(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
