Add padding before creation of embeddings

--- a/1. data_preparation.ipynb
+++ b/1. data_preparation.ipynb
@@ -26,7 +26,6 @@
     "import numpy as np\n",
     "\n",
     "# OsmitcStress.xlsx is the file that contains the data already filtered for the osmotic stress experiment\n",
-    "# Source: TODO add source\n",
     "df = pd.read_excel('data/OsmoticStress.xlsx')"
    ]
   },
@@ -140,6 +139,8 @@
    },
    "outputs": [],
    "source": [
+    "# Reads data from the .Fasta file\n",
+    "\n",
     "from Bio import SeqIO\n",
     "\n",
     "def read_fasta_to_dict(file_path):\n",
@@ -171,9 +172,7 @@
    "outputs": [],
    "source": [
     "df[\"full_sequence\"]= df[\"full_sequence\"].astype(str)\n",
-    "df[\"Peptide_sequence\"]= df[\"Peptide_sequence\"]. astype(str)\n",
-    "\n",
-    "# TODO: what other poistion encoding can be used?"
+    "df[\"Peptide_sequence\"]= df[\"Peptide_sequence\"]. astype(str)"
    ]
   },
   {
@@ -202,6 +201,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Just get the sequences bellow length of 1000 to ease out memory usage\n",
+    "\n",
     "trimmed_df = df[df['full_sequence'].apply(lambda x: len(x)) < 1000]"
    ]
   },
@@ -255,6 +256,7 @@
     "        positions[start_index:start_index + short_len] = 1\n",
     "    return positions.tolist()\n",
     "\n",
+    "# Creation of the binary positions\n",
     "trimmed_df['Binary_Positions'] = trimmed_df.apply(binary_position, axis=1)"
    ]
   },
@@ -458,7 +460,7 @@
    "source": [
     "max_length = 1000\n",
     "\n",
-    "# Padding embeddings\n",
+    "# Padding binary position to length of 1000\n",
     "trimmed_df['Padded_Binary_Positions'] = trimmed_df['Binary_Positions'].apply(lambda x: np.pad(x, (0, max_length - len(x)), 'constant'))"
    ]
   },
@@ -604,25 +606,9 @@
     }
    ],
    "source": [
+    "# Prevent formating problem\n",
     "import json\n",
     "trimmed_df['Padded_Binary_Positions'] = trimmed_df['Padded_Binary_Positions'].apply(lambda x: json.dumps(x.tolist()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3000]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(trimmed_df['Padded_Binary_Positions'].apply(len).unique())  # This should print [1000] indicating all rows are padded to 1000 length"
    ]
   },
   {
