--- a/3. create_dataset.ipynb
+++ b/3. create_dataset.ipynb
@@ -786,9 +786,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tp",
+   "display_name": "Python [conda env:.conda-l-schewinski-tp-2]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-.conda-l-schewinski-tp-2-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -800,9 +800,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
